--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "types": "./lib/index",
   "repository": {
     "type": "git",
-    "url": "https://github.com/RauliL/plorth-parser"
+    "url": "https://github.com/RauliL/plorth-parser.git"
   },
+  "bugs": {
+    "url": "https://github.com/RauliL/plorth-parser/issues"
+  },
+  "homepage": "https://github.com/RauliL/plorth-parser",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
