--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "pretest": "npm run build",
     "test": "istanbul cover _mocha -- --require source-map-support/register test.js",
     "posttest": "istanbul check-coverage",
-    "coveralls": "cat ./coverage/lconv.info | coveralls",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
     "prepublish": "npm run build"
   },
   "author": "Rauli Laine <rauli.laine@iki.fi>",
