Fix NPM publishing
The package published in NPM is currently broken because NPM by default
ignores everything which is also listed in `.gitignore`.

Solution to this is to add separate `.npmignore` which contains the
source code directory so that the generated JavaScript will not be
included in the Git repository but is still included by NPM.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "plorth-parser",
   "version": "1.0.0",
   "description": "Parser for Plorth programming language",
-  "main": "./lib/index",
-  "types": "./lib/index",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/RauliL/plorth-parser.git"
@@ -24,8 +24,8 @@
   "author": "Rauli Laine <rauli.laine@iki.fi>",
   "license": "BSD-2-Clause",
   "files": [
-    "./lib/*.d.ts",
-    "./lib/*.js"
+    "./dist/*.d.ts",
+    "./dist/*.js"
   ],
   "devDependencies": {
     "coveralls": "^3.0.0",
