--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,9 @@
 {
   "compilerOptions": {
-    "outDir": "./lib",
-    "declaration": true,
-    "sourceMap": true,
-    "module": "commonjs",
     "target": "es5",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "strictNullChecks": true
-  },
-  "include": [
-    "./src/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+    "module": "commonjs",
+    "declaration": true,
+    "outDir": "./dist",
+    "strict": true
+  }
 }
