--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "plorth-parser",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Parser for Plorth programming language",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -19,14 +19,10 @@
     "test": "istanbul cover _mocha -- --require source-map-support/register test.js",
     "posttest": "istanbul check-coverage",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "author": "Rauli Laine <rauli.laine@iki.fi>",
   "license": "BSD-2-Clause",
-  "files": [
-    "./dist/*.d.ts",
-    "./dist/*.js"
-  ],
   "devDependencies": {
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
