--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.5.0",
+    "plorth-types": "^1.0.1",
     "should": "^12.0.0",
     "source-map-support": "^0.5.0",
     "typescript": "^2.5.3"
