--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./dist",
+    "outDir": "./",
     "strict": true
-  }
+  },
+  "files": [
+    "index.ts"
+  ]
 }
